// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<form
  className="Search__SearchContainer-sey9om-0 bVywlp"
  id="Search_Standard"
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 bJMnrR Search__SearchInput-sey9om-1 ftjKE"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 hkSjVt Search__SearchButton-sey9om-3 hoihNF"
      disabled={false}
      htmlFor={null}
      id="Search_Standard-search-button"
      name="Search_Standard-search-button"
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="search"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr Search__NewTextInput-sey9om-2 ewHPVk"
      id="Search_Standard-search-bar_container"
      rows={null}
    >
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-2 eawNkz"
        cols=""
        disabled={false}
        id="Search_Standard-search-bar"
        list={null}
        name="Search_Standard-search-bar"
        onBlur={null}
        onChange={[Function]}
        onFocus={null}
        onKeyPress={[Function]}
        pattern={null}
        placeholder="Search Location"
        rows=""
        type="search"
        value=""
      />
    </section>
  </div>
</form>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "250px",
    }
  }
>
  <form
    className="Search__SearchContainer-sey9om-0 bVywlp"
    id="Suggestions"
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 bJMnrR Search__SearchInput-sey9om-1 ftjKE"
      height={null}
      id={null}
      overflow={null}
      width={null}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 hkSjVt Search__SearchButton-sey9om-3 hoihNF"
        disabled={false}
        htmlFor={null}
        id="Suggestions-search-button"
        name="Suggestions-search-button"
        onClick={[Function]}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
          id={null}
          rows={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="search"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </button>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr Search__NewTextInput-sey9om-2 ewHPVk"
        id="Suggestions-search-bar_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 eawNkz"
          cols=""
          disabled={false}
          id="Suggestions-search-bar"
          list={null}
          name="Suggestions-search-bar"
          onBlur={null}
          onChange={[Function]}
          onFocus={null}
          onKeyPress={[Function]}
          pattern={null}
          placeholder="Search Location"
          rows=""
          type="search"
          value=""
        />
      </section>
    </div>
    <div
      className="Container__Wrapper-sc-1i4fzzd-0 iqXYVv Search__DropContainer-sey9om-4 gpLFbU"
      height={null}
      width={null}
    >
      <div
        className="Container__BoxContainer-sc-1i4fzzd-1 gzDFuH"
        height=""
        id="Suggestions-results-container"
      >
        <ul
          className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
          id={null}
        >
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  White House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Orange House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  1224 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Red House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </form>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <form
    className="Search__SearchContainer-sey9om-0 bVywlp"
    id="Suggestions_More"
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 bJMnrR Search__SearchInput-sey9om-1 ftjKE"
      height={null}
      id={null}
      overflow={null}
      width={null}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 hkSjVt Search__SearchButton-sey9om-3 hoihNF"
        disabled={false}
        htmlFor={null}
        id="Suggestions_More-search-button"
        name="Suggestions_More-search-button"
        onClick={[Function]}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
          id={null}
          rows={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="search"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </button>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr Search__NewTextInput-sey9om-2 ewHPVk"
        id="Suggestions_More-search-bar_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 eawNkz"
          cols=""
          disabled={false}
          id="Suggestions_More-search-bar"
          list={null}
          name="Suggestions_More-search-bar"
          onBlur={null}
          onChange={[Function]}
          onFocus={null}
          onKeyPress={[Function]}
          pattern={null}
          placeholder="Search Location"
          rows=""
          type="search"
          value=""
        />
      </section>
    </div>
    <div
      className="Container__Wrapper-sc-1i4fzzd-0 iqXYVv Search__DropContainer-sey9om-4 gpLFbU"
      height={null}
      width={null}
    >
      <div
        className="Container__BoxContainer-sc-1i4fzzd-1 gzDFuH"
        height=""
        id="Suggestions_More-results-container"
      >
        <ul
          className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
          id={null}
        >
          <li
            className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme List__ListTitle-sc-43f2zq-3 bbfEBL"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Showing 10 of 14 Results
            </p>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  White House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Orange House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  1224 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Red House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Green House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Black House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Blue House
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Address
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  APN
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Owner
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={null}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 RjiBe"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  Address
                </p>
                <p
                  className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                  fontSize="0.75em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0.4px"
                >
                  123 Malibu Drive, CA 92660
                </p>
              </div>
            </div>
          </li>
          <li
            className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
            disabled={false}
            href={null}
            id={null}
            onClick={[Function]}
            tabIndex="0"
          >
            <div
              className="Bar__BarLayout-icfo76-2 eUVQsH"
              id={null}
              onClick={null}
            >
              <div
                className="Bar__Slot-icfo76-1 fIRUJx"
              >
                <p
                  className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                  fontSize="1em"
                  fontWeight={400}
                  id={null}
                  letterSpacing="0px"
                >
                  View All
                </p>
              </div>
              <div
                className="Bar__Slot-icfo76-1 cxljst"
              >
                <div
                  className="Tag__TagContainer-sc-128kb3h-0 lcEzps"
                  id={null}
                  label="+ 4"
                >
                  <label
                    className="Typography__StyledLabel-sc-19auepv-0 lgicJH"
                    fontSize="0.68em"
                    fontWeight={600}
                    htmlFor={null}
                    letterSpacing="1px"
                  >
                    + 4
                  </label>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </form>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "height": "150px",
    }
  }
>
  <form
    className="Search__SearchContainer-sey9om-0 bVywlp"
    id="Search_Offline"
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 bJMnrR Search__SearchInput-sey9om-1 ftjKE"
      height={null}
      id={null}
      overflow={null}
      width={null}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 hkSjVt Search__SearchButton-sey9om-3 hoihNF"
        disabled={false}
        htmlFor={null}
        id="Search_Offline-search-button"
        name="Search_Offline-search-button"
        onClick={[Function]}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
          id={null}
          rows={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="search"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </button>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr Search__NewTextInput-sey9om-2 ewHPVk"
        id="Search_Offline-search-bar_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 eawNkz"
          cols=""
          disabled={false}
          id="Search_Offline-search-bar"
          list={null}
          name="Search_Offline-search-bar"
          onBlur={null}
          onChange={[Function]}
          onFocus={null}
          onKeyPress={[Function]}
          pattern={null}
          placeholder="Search Location"
          rows=""
          type="search"
          value=""
        />
      </section>
    </div>
    <div
      className="Container__Wrapper-sc-1i4fzzd-0 iqXYVv Search__DropContainer-sey9om-4 gpLFbU"
      height={null}
      width={null}
    >
      <div
        className="Container__BoxContainer-sc-1i4fzzd-1 gzDFuH"
        height=""
        id="Search_Offline-results-container"
      >
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-signal-slash fa-w-20 Icon__StyledIcon-sc-1oa9m1v-1 duCWGY"
              color={null}
              data-icon="signal-slash"
              data-prefix="far"
              focusable="false"
              fontSize="2em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M633.99 471.02L36 3.51C29.1-2.01 19.03-.9 13.51 6l-10 12.49C-2.02 25.39-.9 35.46 6 40.98l598 467.51c6.9 5.52 16.96 4.4 22.49-2.49l10-12.49c5.52-6.9 4.41-16.97-2.5-22.49zM80 384H48c-8.84 0-16 7.16-16 16v96c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-96c0-8.84-7.16-16-16-16zm400-272c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v127.66l64 50.04V112zm128-96c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v323.73l64 50.04V16zM416 496c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-23.52l-64-50.04V496zm-128 0c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V372.41l-64-50.04V496zm-80-208h-32c-8.84 0-16 7.16-16 16v192c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V304c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              You are offline
            </p>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "height": "150px",
    }
  }
>
  <form
    className="Search__SearchContainer-sey9om-0 bVywlp"
    id="Search_BadConnection"
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 bJMnrR Search__SearchInput-sey9om-1 ftjKE"
      height={null}
      id={null}
      overflow={null}
      width={null}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 hkSjVt Search__SearchButton-sey9om-3 hoihNF"
        disabled={false}
        htmlFor={null}
        id="Search_BadConnection-search-button"
        name="Search_BadConnection-search-button"
        onClick={[Function]}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
          id={null}
          rows={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="search"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </button>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr Search__NewTextInput-sey9om-2 ewHPVk"
        id="Search_BadConnection-search-bar_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-2 eawNkz"
          cols=""
          disabled={false}
          id="Search_BadConnection-search-bar"
          list={null}
          name="Search_BadConnection-search-bar"
          onBlur={null}
          onChange={[Function]}
          onFocus={null}
          onKeyPress={[Function]}
          pattern={null}
          placeholder="Search Location"
          rows=""
          type="search"
          value=""
        />
      </section>
    </div>
    <div
      className="Container__Wrapper-sc-1i4fzzd-0 iqXYVv Search__DropContainer-sey9om-4 gpLFbU"
      height={null}
      width={null}
    >
      <div
        className="Container__BoxContainer-sc-1i4fzzd-1 gzDFuH"
        height=""
        id="Search_BadConnection-results-container"
      >
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-signal-slash fa-w-20 Icon__StyledIcon-sc-1oa9m1v-1 duCWGY"
              color={null}
              data-icon="signal-slash"
              data-prefix="far"
              focusable="false"
              fontSize="2em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M633.99 471.02L36 3.51C29.1-2.01 19.03-.9 13.51 6l-10 12.49C-2.02 25.39-.9 35.46 6 40.98l598 467.51c6.9 5.52 16.96 4.4 22.49-2.49l10-12.49c5.52-6.9 4.41-16.97-2.5-22.49zM80 384H48c-8.84 0-16 7.16-16 16v96c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-96c0-8.84-7.16-16-16-16zm400-272c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v127.66l64 50.04V112zm128-96c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v323.73l64 50.04V16zM416 496c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-23.52l-64-50.04V496zm-128 0c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V372.41l-64-50.04V496zm-80-208h-32c-8.84 0-16 7.16-16 16v192c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V304c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Check your internet connection
            </p>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
